airflow-docker/logs/dag_id=api_dag/run_id=manual__2024-02-18T19:21:43.656055+00:00/task_id=load_data_task/attempt=1.log
[2024-02-18T19:21:50.350+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: api_dag.load_data_task manual__2024-02-18T19:21:43.656055+00:00 [queued]>
[2024-02-18T19:21:50.358+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: api_dag.load_data_task manual__2024-02-18T19:21:43.656055+00:00 [queued]>
[2024-02-18T19:21:50.359+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2024-02-18T19:21:50.369+0000] {taskinstance.py:2191} INFO - Executing <Task(PostgresOperator): load_data_task> on 2024-02-18 19:21:43.656055+00:00
[2024-02-18T19:21:50.374+0000] {standard_task_runner.py:60} INFO - Started process 3590 to run task
[2024-02-18T19:21:50.377+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'api_dag', 'load_data_task', 'manual__2024-02-18T19:21:43.656055+00:00', '--job-id', '42', '--raw', '--subdir', 'DAGS_FOLDER/api_dag.py', '--cfg-path', '/tmp/tmphwjct41o']
[2024-02-18T19:21:50.378+0000] {standard_task_runner.py:88} INFO - Job 42: Subtask load_data_task
[2024-02-18T19:21:50.417+0000] {task_command.py:423} INFO - Running <TaskInstance: api_dag.load_data_task manual__2024-02-18T19:21:43.656055+00:00 [running]> on host 482b276ff4ae
[2024-02-18T19:21:50.499+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='api_dag' AIRFLOW_CTX_TASK_ID='load_data_task' AIRFLOW_CTX_EXECUTION_DATE='2024-02-18T19:21:43.656055+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-02-18T19:21:43.656055+00:00'
[2024-02-18T19:21:50.500+0000] {sql.py:276} INFO - Executing: None
[2024-02-18T19:21:50.508+0000] {base.py:83} INFO - Using connection ID 'postgres_conn' for task execution.
[2024-02-18T19:21:50.515+0000] {base.py:83} INFO - Using connection ID 'postgres_conn' for task execution.
[2024-02-18T19:21:52.505+0000] {sql.py:450} INFO - Running statement: None, parameters: None
[2024-02-18T19:21:52.791+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "None"
LINE 1: None
        ^

[2024-02-18T19:21:52.799+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=api_dag, task_id=load_data_task, execution_date=20240218T192143, start_date=20240218T192150, end_date=20240218T192152
[2024-02-18T19:21:52.819+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 42 for task load_data_task (syntax error at or near "None"
LINE 1: None
        ^
; 3590)
[2024-02-18T19:21:52.843+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-18T19:21:52.870+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
